@@ -25,7 +25,7 @@ http://www.gnu.org/licenses/gpl.txt for license details.
 
 int main(int argc, char *argv[]) {
     int             fdin, fdout;
-    int             syncfreq, npages, nrrefreshs, j;
+    int             syncfreq, npages, nrrefreshs;
     long            psize, bsize, fsize, nloops, nsec, n;
     char            *buf, area[65536], *ptmp;
     struct stat     sb;
@@ -123,9 +123,7 @@ int main(int argc, char *argv[]) {
          /* refresh data to write next, npages pages should fit into L1 cache */
          memclean(buf, bsize);         
          read(fdin, (void*)buf, bsize);
-         for(j=nrrefreshs; j; j--) {
-             refreshmem(buf, bsize);
-         }
+         refreshmems(buf, bsize, nrrefreshs);
          while (clock_nanosleep(CLOCK_MONOTONIC, TIMER_ABSTIME, &mtime, NULL)
                      != 0);
          /* now copy the refreshed page */
