@@ -1,5 +1,5 @@
 /*
-playhrt.c                Copyright frankl 2013-2016
+playhrt.c                Copyright frankl 2013-2024
 
 This file is part of frankl's stereo utilities.
 See the file License.txt of the distribution and
@@ -277,7 +277,7 @@ void usage( ) {
 int main(int argc, char *argv[])
 {
     int sfd, s, moreinput, err, verbose, nrchannels, startcount, sumavg,
-        stripped, innetbufsize, dobufstats, countdelay, maxbad, nrrefs, j;
+        stripped, innetbufsize, dobufstats, countdelay, maxbad, nrrefs;
     long blen, hlen, ilen, olen, extra, loopspersec, nrdelays, sleep,
          nsec, count, wnext, badloops, badreads, readmissing, avgav, checkav;
     long long icount, ocount, badframes;
@@ -678,8 +678,7 @@ int main(int argc, char *argv[])
             mtime.tv_nsec -= 1000000000;
             mtime.tv_sec++;
           }
-          for(j=nrrefs; j; j--)
-              refreshmem(optr, wnext*bytesperframe);
+          refreshmems(optr, wnext*bytesperframe, nrrefs);
           clock_nanosleep(CLOCK_MONOTONIC, TIMER_ABSTIME, &mtime, NULL);
           /* write a chunk, this comes first immediately after waking up */
 #ifdef ALSANC
@@ -782,8 +781,7 @@ int main(int argc, char *argv[])
             mtime.tv_nsec -= 1000000000;
             mtime.tv_sec++;
           }
-          for(j=nrrefs; j; j--)
-              refreshmem(iptr, s);
+          refreshmems(iptr, s, nrrefs);
           clock_nanosleep(CLOCK_MONOTONIC, TIMER_ABSTIME, &mtime, NULL);
           snd_pcm_mmap_commit(pcm_handle, offset, frames);
           icount += s;
@@ -803,8 +801,7 @@ int main(int argc, char *argv[])
             mtime.tv_nsec -= 1000000000;
             mtime.tv_sec++;
           }
-          for(j=nrrefs; j; j--)
-              refreshmem(iptr, s);
+          refreshmems(iptr, s, nrrefs);
           clock_nanosleep(CLOCK_MONOTONIC, TIMER_ABSTIME, &mtime, NULL);
           snd_pcm_mmap_commit(pcm_handle, offset, frames);
           icount += s;
@@ -838,8 +835,7 @@ int main(int argc, char *argv[])
             mtime.tv_nsec -= 1000000000;
             mtime.tv_sec++;
           }
-          for(j=nrrefs; j; j--)
-              refreshmem(iptr, s);
+          refreshmems(iptr, s, nrrefs);
           clock_nanosleep(CLOCK_MONOTONIC, TIMER_ABSTIME, &mtime, NULL);
           snd_pcm_mmap_commit(pcm_handle, offset, frames);
           icount += s;
@@ -933,8 +929,7 @@ int main(int argc, char *argv[])
 
 
           /* we refresh the new data before sleeping and commiting */
-          for(j=nrrefs; j; j--)
-              refreshmem(iptr, s);
+          refreshmems(iptr, s, nrrefs);
 
           /* debug:  check that we really sleep to some time in the future */
           if (countdelay) {
